--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,10 +1,10 @@
 # Meta Data for SEO
 
 ## Homepage
-title = "Doks"
+title = "神なら分かるロジバン入門"
 titleSeparator = "-"
-titleAddition = "Modern Documentation Theme"
-description = "Doks is a Hugo theme for building secure, fast, and SEO-ready documentation websites, which you can easily update and customize."
+titleAddition = "モダンでシンプルなロジバンを詳解します"
+description = "説明 is a Hugo theme helping you build modern documentation websites that are secure, fast, and SEO-ready — by default."
 
 ## Documentation
 # docsVersion = "0.3"
