--- a/.github/workflows/node.js-ci.yml
+++ b/.github/workflows/node.js-ci.yml
@@ -35,7 +35,10 @@ jobs:
     - name: Check install Hugo
       run: hugo version
 
-    - name: Install dependencies
+    - name: Upgrade NPM
+      run: npm install -g npm
+
+      - name: Install dependencies
       run: npm ci
     
     - name: Check for linting errors
